Adicionando HTML dinamicamente atraves de JS

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
     <section class="content">
         <h1>Pokedex</h1>
-        <ol class="pokemons">
-            <li class="pokemon">
-                <span class="pokemonNumber">#001</span>
+        <ol id="pokemonList" class="pokemons">
+            <li class="pokemon grass">
+                <span id="pokemonNumber">#001</span>
                 <span class="name">Bulbassaur</span>
                 <div class="detail">
                     <ol class="types">
